load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "middleware.go",
        "request-id.go",
    ],
    importpath = "github.com/oswee/prime/go/pkg/middleware",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:go_default_library"],
)
