load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "handlers.go",
        "routes.go",
        "server.go",
    ],
    importpath = "github.com/oswee/prime/go/pkg/server",
    visibility = ["//visibility:public"],
    deps = [
        "//go/pkg/logger",
        "//go/pkg/middleware",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_lpar_gzipped//:go_default_library",
    ],
)
