load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("@npm//@bazel/concatjs:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "action",
    srcs = glob(
        include = [
            "src/**/*.ts",
        ],
        exclude = [
            "src/**/*.spec.ts",
            "src/test-setup.ts",
        ],
    ),
    tsconfig = ":tsconfig",
    deps = [
        "@npm//redux",
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "tsconfig.json",
        "//javascript:tsconfig.base.json",
    ],
)
